Fixed footer alignment and updated readme

--- a/css/custom.css
+++ b/css/custom.css
@@ -244,7 +244,7 @@ button.btn.form-button:hover, button.btn.form-button:focus {
     src: url(../fonts/Montserrat-Regular.ttf);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991px) {
     #social div:nth-child(2) {
         text-align: right;
     }
